--- a/PhotoStudioFS/Views/Home/Index.cshtml
+++ b/PhotoStudioFS/Views/Home/Index.cshtml
@@ -25,8 +25,7 @@
             </div>
             <div class="form-group">
                 <select id="appType" name="Type" class="form-control" required>
-                    @*<option value="0">Çekim Türü Seçiniz</option>*@
-                    <option value="0">@ViewBag.contact.Name</option>
+                    <option value="0">Çekim Türü Seçiniz</option>
                     <option value="1">Doğum Çekimi</option>
                     <option value="2">Düğün Çekimi</option>
                     <option value="3">Dış Çekim</option>
