çekim türü dinamik

--- a/PhotoStudioFS/Views/Admin/Index.cshtml
+++ b/PhotoStudioFS/Views/Admin/Index.cshtml
@@ -151,7 +151,7 @@
                                     <td>@appointment.Customer.FullName</td>
                                     <td>@appointment.Customer.Email</td>
                                     <td>@appointment.Customer.PhoneNumber</td>
-                                    <td>@appointment.Type</td>
+                                    <td>@appointment.ShootType.Name</td>
                                     <td>
                                         @appointment.AppointmentDateStart.ToShortDateString()
                                         @appointment.AppointmentDateStart.ToString("HH:mm")-@appointment.AppointmentDateEnd.ToString("HH:mm")
