--- a/PhotoStudioFS/Views/Email/_EmailLayoutHtml.cshtml
+++ b/PhotoStudioFS/Views/Email/_EmailLayoutHtml.cshtml
@@ -100,7 +100,7 @@
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <!-- LOGO -->
         <tr>
-            <td bgcolor="#0088f3" align="center">
+            <td bgcolor="#f0f3f7" align="center">
                 <!--[if (gte mso 9)|(IE)]>
                 <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
                 <tr>
@@ -124,7 +124,7 @@
         </tr>
         <!-- HERO -->
         <tr>
-            <td bgcolor="#0088f3" align="center" style="padding: 0px 10px 0px 10px;">
+            <td bgcolor="#f0f3f7" align="center" style="padding: 0px 10px 0px 10px;">
                 <!--[if (gte mso 9)|(IE)]>
                 <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
                 <tr>
@@ -181,13 +181,13 @@
                     <!-- UNSUBSCRIBE -->
                     <tr>
                         <td bgcolor="#f4f4f4" style="padding: 20px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px; text-align: center">
-                            <p style="margin: 0;">If these emails get annoying, please feel free to <a href="https://derekarends.com/unsubscribe" target="_blank" style="color: #111111; font-weight: 700;">unsubscribe</a>.</p>
+                            <p style="margin: 0;">Sinem Kobaner - Fotoğraf İşleri <a href="https://sinemkobaner.com" target="_blank" style="color: #111111; font-weight: 700;">unsubscribe</a>.</p>
                         </td>
                     </tr>
-                    <!-- ADDRESS -->
+                    @* ADDRESS*@
                     <tr>
                         <td bgcolor="#f4f4f4" style="padding: 0px 20px 20px 20px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px; text-align: center">
-                            <p style="margin: 0;">123 Sugar Lane - Candy Apple, CA - 90210</p>
+                            <p style="margin: 0;">Güzelyalı, 25-1, Uğur Mumcu Blv., 01170 Çukurova/Adana</p>
                         </td>
                     </tr>
                 </table>
