--- a/PhotoStudioFS/Views/Shared/_HeaderAdmin.cshtml
+++ b/PhotoStudioFS/Views/Shared/_HeaderAdmin.cshtml
@@ -4,7 +4,7 @@
 <div class="app-header header d-flex">
     <div class="container-fluid">
         <div class="d-flex">
-            <a class="header-brand" href="index.html">
+            <a class="header-brand" asp-controller="Home" asp-action="Index">
                 <img src="~/Client/images/logo.png" class="header-brand-img main-logo" alt="Sinem Kobaner">
                 @*<img src="~/Admin/images/brand/icon.png" class="header-brand-img icon-logo" alt="Hogo logo">*@
             </a><!-- logo-->
