--- a/PhotoStudioFS/Views/Shared/_SidebarAdmin.cshtml
+++ b/PhotoStudioFS/Views/Shared/_SidebarAdmin.cshtml
@@ -102,6 +102,20 @@
                                 <span class="side-menu__label">Mail ve Bildirim Gönder</span>
                             </a>
                         </li>
+                        <li class="slide">
+                            <a class="side-menu__item" data-toggle="slide" href="#">
+                                <i class="side-menu__icon typcn typcn-code"></i>
+                                <span class="side-menu__label">Site Ayarları</span>
+                                <i class="angle fa fa-angle-right"></i>
+                            </a>
+                            <ul class="slide-menu">
+                                <li>
+                                    <a class="slide-item" asp-controller="Setting" asp-action="ShootTypes">
+                                        <span>Çekim Türleri</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
                     }
                     else if (ViewData["UserRole"].Equals("Customer"))
                     {
