--- a/PhotoStudioFS/Views/Appointment/Edit.cshtml
+++ b/PhotoStudioFS/Views/Appointment/Edit.cshtml
@@ -35,9 +35,9 @@
                         <span asp-validation-for="Phone" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Type" class="control-label"></label>
-                        <input asp-for="Type" class="form-control" />
-                        <span asp-validation-for="Type" class="text-danger"></span>
+                        <label asp-for="ShootType.Name" class="control-label"></label>
+                        <input asp-for="ShootType.Name" class="form-control" />
+                        <span asp-validation-for="ShootType.Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Message" class="control-label"></label>
