--- a/PhotoStudioFS/Views/Email/CreatePasswordHtml.cshtml
+++ b/PhotoStudioFS/Views/Email/CreatePasswordHtml.cshtml
@@ -15,6 +15,16 @@
         Hesabınız aktifleştirmek için şifre belirlemesi yapmanız gerekmektedir. <b>Şifre Oluştur</b> linkine giderek şifrenizi oluşturabilirsiniz.
     </p>
 }
+else if (Model.Info.Type.Equals("NewAccount"))
+{
+    <p>
+        Sayın <b>@Model.Info.FullName</b> , <br />
+        <b>@Model.Info.Date.ToShortDateString()</b> tarihinde <b>Sinem Kobaner - Fotoğraf İşleri</b> için hesabınız oluşturulmuştur.
+        Randevularınızın takibini yapabilmek ve fotoğraflarınızı yüklendiği zaman görmek için, hesabınızı aktif hale getirmeniz gerekmektedir.
+        <br />
+        Hesabınız aktifleştirmek için şifre belirlemesi yapmanız gerekmektedir. <b>Şifre Oluştur</b> linkine giderek şifrenizi oluşturabilirsiniz.
+    </p>
+}
 else if (Model.Info.Type.Equals("Employee"))
 {
     <p>
