--- a/PhotoStudioFS/Views/Shared/_LayoutAdmin.cshtml
+++ b/PhotoStudioFS/Views/Shared/_LayoutAdmin.cshtml
@@ -105,7 +105,7 @@
             <div class="app-content  my-3 my-md-5 toggle-content">
                 <div class="side-app">
                     @await Html.PartialAsync("_BreadcrumbAdmin")
-
+                    @await Html.PartialAsync("_StatusMessages")
                     @RenderBody()
                 </div>
             </div>
