--- a/PhotoStudioFS/Views/Photo/Index.cshtml
+++ b/PhotoStudioFS/Views/Photo/Index.cshtml
@@ -60,7 +60,7 @@
                             </div>
                             :
                             <div class="col-md-6">
-                                <label class="text-left font-weight-bold">@ViewBag.Appointment.Type</label>
+                                <label class="text-left font-weight-bold">@ViewBag.Appointment.ShootType.Name</label>
                             </div>
                         </div>
                         <div class="row">
@@ -112,7 +112,7 @@
             </div>
             <div class="card-body">
                 <div id="loader-upload">
-                    
+
                     <label id="current-progress-count" class="font-weight-bold" style="color:black; font-size:x-large;"></label>
                     <br />
 
