--- a/PhotoStudioFS/Views/Setting/ShootTypes.cshtml
+++ b/PhotoStudioFS/Views/Setting/ShootTypes.cshtml
@@ -8,7 +8,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h3 class="card-title">Yeni Müşteri Ekle</h3>
+        <h3 class="card-title">Yeni Çekim Türü Ekle</h3>
     </div>
     <div class="card-body">
         <div class="row">
@@ -32,7 +32,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h3 class="card-title">Yeni Müşteri Ekle</h3>
+        <h3 class="card-title">Ekli Çekim Türleri</h3>
     </div>
     <div class="card-body">
         <div class="row">
