Müşteri sayfasına randevu alma sayfasına başlandı. Randevu talebi ekleme düzenlenmeye başlandı.

--- a/PhotoStudioFS/Views/Shared/_SidebarAdmin.cshtml
+++ b/PhotoStudioFS/Views/Shared/_SidebarAdmin.cshtml
@@ -125,6 +125,12 @@
                                 <span class="side-menu__label">Randevularım</span>
                             </a>
                         </li>
+                        <li>
+                            <a class="side-menu__item" asp-controller="CustomerSection" asp-action="CreateAppointment">
+                                <i class="side-menu__icon typcn typcn-location-outline"></i>
+                                <span class="side-menu__label">Randevu Talep Et</span>
+                            </a>
+                        </li>
                     }
                 </ul>
             </div>
