Asset path düzeltmeleri

--- a/PhotoStudioFS/Views/Shared/_HeaderAdmin.cshtml
+++ b/PhotoStudioFS/Views/Shared/_HeaderAdmin.cshtml
@@ -5,7 +5,7 @@
     <div class="container-fluid">
         <div class="d-flex">
             <a class="header-brand" asp-controller="Home" asp-action="Index">
-                <img src="~/Client/images/logo.png" class="header-brand-img main-logo" alt="Sinem Kobaner">
+                <img src="~/images/logo.png" class="header-brand-img main-logo" alt="Sinem Kobaner">
             </a><!-- logo-->
             <a aria-label="Hide Sidebar" class="app-sidebar__toggle" data-toggle="sidebar" href="#"></a>
             <a href="#" data-toggle="search" class="nav-link nav-link  navsearch"><i class="fa fa-search"></i></a><!-- search icon -->
