--- a/PhotoStudioFS/Views/Shared/_LayoutAccountManager.cshtml
+++ b/PhotoStudioFS/Views/Shared/_LayoutAccountManager.cshtml
@@ -60,7 +60,7 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <div class="text-center mb-6">
-                                            <img src="~/Client/images/logo.png" style="width:40%;" class="" alt="Sinem Kobaner">
+                                            <img src="~/images/logo.png" style="width:40%;" class="" alt="Sinem Kobaner">
                                         </div>
                                         @RenderBody()
                                     </div>
