--- a/PhotoStudioFS/Views/Email/_EmailLayoutHtml.cshtml
+++ b/PhotoStudioFS/Views/Email/_EmailLayoutHtml.cshtml
@@ -110,7 +110,7 @@
                     <tr>
                         <td align="center" valign="top" style="padding: 40px 10px 40px 10px;">
                             <a href="https://sinemkobaner.com" target="_blank">
-                                <img alt="Logo" src="https://localhost:5001/Client/images/logo.png" width="30%" style="display: block; width:30%; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;" border="0">
+                                <img alt="Logo" src="https://localhost:5001/images/logo.png" width="30%" style="display: block; width:30%; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;" border="0">
                             </a>
                         </td>
                     </tr>
