phone mask implementation. some Bugs fixed

--- a/PhotoStudioFS/Views/Customer/Edit.cshtml
+++ b/PhotoStudioFS/Views/Customer/Edit.cshtml
@@ -54,3 +54,9 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+
+    <script src="~/Admin/plugins/masked-input/jquery.inputmask.js"></script>
+    <script src="~/Admin/js/custom/customer.js"></script>
+}
