--- a/PhotoStudioFS/Views/Shared/_LayoutAccountManager.cshtml
+++ b/PhotoStudioFS/Views/Shared/_LayoutAccountManager.cshtml
@@ -13,8 +13,8 @@
     <meta name="keywords" content="sinem,kobaner,fotoğraf,işleri,resim" />
 
     <!-- Favicon -->
-    <link rel="icon" href="~/Client/images/logo.ico" type="image/x-icon" />
-    <link rel="shortcut icon" type="image/x-icon" href="~/Client/images/logo.ico" />
+    <link rel="icon" href="~/images/logo.ico" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/x-icon" href="~/images/logo.ico" />
 
     <!-- Title -->
     <title>Sinem Kobaner</title>
