--- a/PhotoStudioFS/Views/Appointment/Edit.cshtml
+++ b/PhotoStudioFS/Views/Appointment/Edit.cshtml
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-10">
                 <form asp-action="Edit">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div asp-validation-summary="All" class="text-danger"></div>
                     <input type="hidden" asp-for="Id" />
                     <input type="hidden" asp-for="ScheduleId" />
                     <input type="hidden" asp-for="ShootTypeId" />
