--- a/PhotoStudioFS/Views/Customer/Create.cshtml
+++ b/PhotoStudioFS/Views/Customer/Create.cshtml
@@ -33,10 +33,10 @@
                     </div>
 
                     @*<div class="form-group">
-                        <label asp-for="CreatedAt" class="control-label">Kayıt Tarihi</label>
-                        <input asp-for="CreatedAt" class="form-control" />
-                        <span asp-validation-for="CreatedAt" class="text-danger"></span>
-                    </div>*@
+                            <label asp-for="CreatedAt" class="control-label">Kayıt Tarihi</label>
+                            <input asp-for="CreatedAt" class="form-control" />
+                            <span asp-validation-for="CreatedAt" class="text-danger"></span>
+                        </div>*@
 
                     <div class="form-group">
                         <label class="custom-control custom-checkbox">
@@ -52,3 +52,9 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+
+    <script src="~/Admin/plugins/masked-input/jquery.inputmask.js"></script>
+    <script src="~/Admin/js/custom/customer.js"></script>
+}
