--- a/PhotoStudioFS/Views/Home/Index.cshtml
+++ b/PhotoStudioFS/Views/Home/Index.cshtml
@@ -27,13 +27,13 @@
                 <input id="appName" name="Name" type="text" class="form-control" placeholder="Adınız ve Soyadınız" required>
             </div>
             <div class="form-group">
-                <input id="appEmail" name="Email" type="text" class="form-control" placeholder="Email Adresiniz" required>
+                <input id="appEmail" name="Email" type="email" class="form-control" placeholder="Email Adresiniz" required>
             </div>
             <div class="form-group">
                 <input id="appPhone" name="Phone" type="tel" class="form-control" placeholder="Telefon Numaranız" required>
             </div>
             <div class="form-group">
-                <select id="appType" name="Type" class="form-control" required>
+                <select id="appType" name="Type" class="form-control" style="height:50px;" required>
                     <option selected disabled value="0">Çekim Türü Seçiniz</option>
                     @foreach (var shoot in ViewBag.ShootTypes)
                     {
@@ -47,9 +47,9 @@
                         <input name="Date" id="appDate" type="text" class="form-control" placeholder="Randevu Tarihi" required>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="form-group">
-                        <select name="DateHour" id="appDateHour" class="form-control" required>
+                        <select name="DateHour" id="appDateHour" class="form-control" style="height:50px;" required>
                             <option value="-1">Randevu Saati</option>
                         </select>
                     </div>
