--- a/PhotoStudioFS/Views/Shared/_ContactRequestPartial.cshtml
+++ b/PhotoStudioFS/Views/Shared/_ContactRequestPartial.cshtml
@@ -7,7 +7,7 @@
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input asp-for="Email" class="form-control" placeholder="@Html.DisplayNameFor(c => c.Email)" required />
+        <input asp-for="Email" class="form-control" type="email" placeholder="@Html.DisplayNameFor(c => c.Email)" required />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
     <div class="form-group">
