--- a/PhotoStudioFS/Views/Shared/_Layout.cshtml
+++ b/PhotoStudioFS/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                         <div class="col-md-5 col-md-pull-2 text-right menu-1">
                             <ul>
                                 <li><a href="#home">Ana Sayfa</a></li>
-                                <li><a href="#colorlib-services">Hizmetlerimiz</a></li>
+                                <li><a href="#services">Hizmetlerimiz</a></li>
                                 <li><a href="#gallery">Galeri</a></li>
                             </ul>
                         </div>
@@ -106,46 +106,47 @@
             </div>
         </section>
         <div class="container">
-
-            <div id="colorlib-services">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4 text-center animate-box">
-                            <div class="services">
-                                <span class="icon">
-                                    <i class="icon-camera4"></i>
-                                </span>
-                                <div class="desc">
-                                    <h3>Fotoğraf Çekimi</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <section id="services">
+                <div id="colorlib-services">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-4 text-center animate-box">
+                                <div class="services">
+                                    <span class="icon">
+                                        <i class="icon-camera4"></i>
+                                    </span>
+                                    <div class="desc">
+                                        <h3>Fotoğraf Çekimi</h3>
+                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-4 text-center animate-box">
-                            <div class="services">
-                                <span class="icon">
-                                    <i class="icon-image2"></i>
-                                </span>
-                                <div class="desc">
-                                    <h3>Dış &amp; İç Çekim</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            <div class="col-md-4 text-center animate-box">
+                                <div class="services">
+                                    <span class="icon">
+                                        <i class="icon-image2"></i>
+                                    </span>
+                                    <div class="desc">
+                                        <h3>Dış &amp; İç Çekim</h3>
+                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-4 text-center animate-box">
-                            <div class="services">
-                                <span class="icon">
-                                    <i class="icon-video3"></i>
-                                </span>
-                                <div class="desc">
-                                    <h3>Video Çekimi</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            <div class="col-md-4 text-center animate-box">
+                                <div class="services">
+                                    <span class="icon">
+                                        <i class="icon-video3"></i>
+                                    </span>
+                                    <div class="desc">
+                                        <h3>Video Çekimi</h3>
+                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <section id="about">
                 <div class="colorlib-about-flex">
                     <div class="col-half about-flex-img animate-box" style="background-image: url(images/about.jpg);"></div>
@@ -307,7 +308,7 @@
                         <p>
                             <ul class="colorlib-footer-links">
                                 <li><a href="#home"><i class="icon-check"></i> Ana Sayfa</a></li>
-                                <li><a href="#colorlib-services"><i class="icon-check"></i> Hizmetlerimiz</a></li>
+                                <li><a href="#services"><i class="icon-check"></i> Hizmetlerimiz</a></li>
                                 <li><a href="#gallery"><i class="icon-check"></i> Galeri</a></li>
                                 <li><a href="#about"><i class="icon-check"></i> Hakkımızda</a></li>
                                 <li><a href="#appcontact"><i class="icon-check"></i> İletişim</a></li>
@@ -336,7 +337,7 @@
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                     Copyright &copy;
                                     @*<script>document.write(new Date().getFullYear());</script> Tüm hakları saklıdır | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>*@
-                                    <script>document.write(new Date().getFullYear());</script> Tüm hakları saklıdır | This template is made with
+                                    <script>document.write(new Date().getFullYear());</script> Tüm hakları saklıdır
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </small><br>
                                 @*<small class="block">Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a href="http://pexels.com/" target="_blank">Pexels</a></small>*@
@@ -377,6 +378,7 @@
     <script src="~/Admin/plugins/sweet-alert/jquery.sweet-modal.min.js"></script>
     <script src="~/Admin/plugins/sweet-alert/sweetalert.min.js"></script>
     <script src="~/Admin/js/sweet-alert.js"></script>
+    <script src="~/Admin/plugins/masked-input/jquery.inputmask.js"></script>
     <!-- Main -->
     <script src="~/Common/Axios/axios.min.js"></script>
 
