--- a/PhotoStudioFS/Views/Shared/_ContactRequestPartial.cshtml
+++ b/PhotoStudioFS/Views/Shared/_ContactRequestPartial.cshtml
@@ -11,7 +11,7 @@
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input asp-for="Phone" class="form-control" placeholder="@Html.DisplayNameFor(c => c.Phone)" required />
+        <input id="contactPhone" asp-for="Phone" class="form-control" placeholder="@Html.DisplayNameFor(c => c.Phone)" required />
         <span asp-validation-for="Phone" class="text-danger"></span>
     </div>
     <div class="form-group">
