--- a/PhotoStudioFS/Views/Customer/Create.cshtml
+++ b/PhotoStudioFS/Views/Customer/Create.cshtml
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group">
                         <label class="form-control-label">Telefon Numarası</label>
-                        <input id="phone" type="tel" class="form-control" asp-for="PhoneNumber">
+                        <input id="phone" type="tel" class="form-control phoneMasked" asp-for="PhoneNumber">
                         <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -31,12 +31,6 @@
                         <input id="email" type="email" class="form-control" asp-for="Email">
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
-
-                    @*<div class="form-group">
-                            <label asp-for="CreatedAt" class="control-label">Kayıt Tarihi</label>
-                            <input asp-for="CreatedAt" class="form-control" />
-                            <span asp-validation-for="CreatedAt" class="text-danger"></span>
-                        </div>*@
 
                     <div class="form-group">
                         <label class="custom-control custom-checkbox">
@@ -55,6 +49,5 @@
 
 @section Scripts {
 
-    <script src="~/Admin/plugins/masked-input/jquery.inputmask.js"></script>
     <script src="~/Admin/js/custom/customer.js"></script>
 }
