--- a/PhotoStudioFS/Views/Customer/Edit.cshtml
+++ b/PhotoStudioFS/Views/Customer/Edit.cshtml
@@ -24,7 +24,7 @@
                     </div>
                     <div class="form-group">
                         <label class="form-control-label">Telefon Numarası</label>
-                        <input id="phone" type="tel" class="form-control" asp-for="PhoneNumber">
+                        <input id="phone" type="tel" class="form-control phoneMasked" asp-for="PhoneNumber">
                         <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                     </div>
                     <div class="form-group">
