--- a/PhotoStudioFS/Views/Shared/_LayoutAdmin.cshtml
+++ b/PhotoStudioFS/Views/Shared/_LayoutAdmin.cshtml
@@ -155,10 +155,6 @@
     <!-- Rightsidebar js -->
     <script src="~/Admin/plugins/sidebar/sidebar.js"></script>
 
-    <!-- Charts js-->
-    @*<script src="~/Admin/plugins/chart/chart.bundle.js"></script>
-        <script src="~/Admin/plugins/chart/utils.js"></script>*@
-
     <!-- File uploads js -->
     <script src="~/Admin/plugins/fileuploads/js/dropify.js"></script>
     <script src="~/Admin/plugins/fileuploads/js/dropify-demo.js"></script>
@@ -180,12 +176,6 @@
     <script src="~/Admin/plugins/multipleselect/multiple-select.js"></script>
     <script src="~/Admin/plugins/multipleselect/multi-select.js"></script>
 
-    <!--Morris  Charts js-->
-    @*<script src="~/Admin/plugins/morris/raphael-min.js"></script>
-            <script src="~/Admin/plugins/morris/morris.js"></script>
-
-        <!-- Custom-charts js-->
-        @*<script src="~/Admin/js/index1.js"></script>*@
 
     @if ((bool)ViewData["IsDataTableUsed"])
     {
@@ -200,6 +190,7 @@
     <script src="~/Admin/plugins/sweet-alert/jquery.sweet-modal.min.js"></script>
     <script src="~/Admin/plugins/sweet-alert/sweetalert.min.js"></script>
     <script src="~/Admin/js/sweet-alert.js"></script>
+    <script src="~/Admin/plugins/masked-input/jquery.inputmask.js"></script>
 
     <script src="~/Admin/js/Admin.js"></script>
     <script src="~/Common/Axios/axios.min.js"></script>
