--- a/PhotoStudioFS/Views/Shared/_SidebarAdmin.cshtml
+++ b/PhotoStudioFS/Views/Shared/_SidebarAdmin.cshtml
@@ -131,6 +131,12 @@
                                 <span class="side-menu__label">Randevu Talep Et</span>
                             </a>
                         </li>
+                        <li>
+                            <a class="side-menu__item" asp-controller="CustomerSection" asp-action="Feedback">
+                                <i class="side-menu__icon typcn typcn-location-outline"></i>
+                                <span class="side-menu__label">Geri Bildirimde Bulun</span>
+                            </a>
+                        </li>
                     }
                 </ul>
             </div>
