--- a/PhotoStudioFS/Views/Shared/_Layout.cshtml
+++ b/PhotoStudioFS/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
             </div>
         </nav>
 
-        <section id="home" class="video-hero" style="height: 800px; background-image: url(images/background.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+        <section id="home" class="video-hero" style="height: 800px; background-image: url(images/7.webp);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
             <div class="overlay"></div>
             @*<a class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=Yz5-mrDBbxU',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}"></a>*@
             <div class="display-t text-center">
@@ -174,35 +174,35 @@
                         </div>
                         <div class="row">
                             <div class="col-md-3 no-gutters">
-                                <a href="images/gallery-1.jpg" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="images/gallery-1.jpg" alt="">
+                                <a href="~/images/1.webp" class="gallery-img image-popup-link animate-box">
+                                    <img class="img-responsive" src="~/images/1.webp" alt="">
                                 </a>
-                                <a href="images/gallery-2.jpg" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="images/gallery-2.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="col-md-3 no-gutters">
-                                <a href="images/gallery-3.jpg" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="images/gallery-3.jpg" alt="">
-                                </a>
-                                <a href="images/gallery-4.jpg" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="images/gallery-4.jpg" alt="">
+                                <a href="~/images/2.webp" class="gallery-img image-popup-link animate-box">
+                                    <img class="img-responsive" src="~/images/2.webp" alt="">
                                 </a>
                             </div>
                             <div class="col-md-3 no-gutters">
-                                <a href="images/gallery-5.jpg" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="images/gallery-5.jpg" alt="">
+                                <a href="~/images/3.webp" class="gallery-img image-popup-link animate-box">
+                                    <img class="img-responsive" src="~/images/3.webp" alt="">
                                 </a>
-                                <a href="images/gallery-6.jpg" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="images/gallery-6.jpg" alt="">
+                                <a href="~/images/4.webp" class="gallery-img image-popup-link animate-box">
+                                    <img class="img-responsive" src="~/images/4.webp" alt="">
                                 </a>
                             </div>
                             <div class="col-md-3 no-gutters">
-                                <a href="images/gallery-7.jpg" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="images/gallery-7.jpg" alt="">
+                                <a href="~/images/5.webp" class="gallery-img image-popup-link animate-box">
+                                    <img class="img-responsive" src="~/images/5.webp" alt="">
                                 </a>
-                                <a href="images/gallery-8.jpg" class="gallery-img image-popup-link animate-box">
-                                    <img class="img-responsive" src="images/gallery-8.jpg" alt="">
+                                <a href="~/images/6.webp" class="gallery-img image-popup-link animate-box">
+                                    <img class="img-responsive" src="~/images/6.webp" alt="">
+                                </a>
+                            </div>
+                            <div class="col-md-3 no-gutters">
+                                <a href="~/images/7.webp" class="gallery-img image-popup-link animate-box">
+                                    <img class="img-responsive" src="~/images/7.webp" alt="">
+                                </a>
+                                <a href="~/images/8.webp" class="gallery-img image-popup-link animate-box">
+                                    <img class="img-responsive" src="~/images/8.webp" alt="">
                                 </a>
                             </div>
                         </div>
@@ -268,21 +268,21 @@
                 </div>
                 <div class="row">
                     <div class="instagram-entry animate-box">
-                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-1.jpg);">
+                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-1.webp);">
                         </a>
-                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-2.jpg);">
+                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-2.webp);">
                         </a>
-                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-3.jpg);">
+                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-3.webp);">
                         </a>
-                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-4.jpg);">
+                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-4.webp);">
                         </a>
-                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-5.jpg);">
+                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-5.webp);">
                         </a>
-                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-6.jpg);">
+                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-6.webp);">
                         </a>
-                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-7.jpg);">
+                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-7.webp);">
                         </a>
-                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-8.jpg);">
+                        <a href="#" class="instagram text-center" style="background-image: url(images/insta-8.webp);">
                         </a>
                     </div>
                 </div>
@@ -322,7 +322,7 @@
                         <ul class="colorlib-footer-links">
                             <li>Güzelyalı, 25-1, Uğur Mumcu Blv., <br> 01170 Çukurova/Adana</li>
                             <li><a href="tel://1234567920"><i class="icon-phone"></i> +90 555 555 55 55</a></li>
-                            <li><a href="mailto:info@yoursite.com"><i class="icon-envelope"></i> fotograf@sinemkobaner.com</a></li>
+                            <li><a href="mailto:fotograf@sinemkobaner.com"><i class="icon-envelope"></i> fotograf@sinemkobaner.com</a></li>
                             <li><a href="#"><i class="icon-location4"></i> sinemkobaner.com</a></li>
                         </ul>
                     </div>
@@ -334,7 +334,6 @@
                         <div class="col-md-12 text-center">
                             <p>
                                 <small class="block">
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                     Copyright &copy;
                                     @*<script>document.write(new Date().getFullYear());</script> Tüm hakları saklıdır | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>*@
                                     <script>document.write(new Date().getFullYear());</script> Tüm hakları saklıdır
@@ -355,30 +354,28 @@
     <!-- jQuery -->
     <script src="~/Client/js/jquery.min.js"></script>
     <!-- jQuery Easing -->
-    <script src="~/Client/js/jquery.easing.1.3.js"></script>
+    <script src="~/Client/js/jquery.easing.1.3.min.js"></script>
     <!-- Bootstrap -->
     <script src="~/Client/js/bootstrap.min.js"></script>
     <!-- Waypoints -->
     <script src="~/Client/js/jquery.waypoints.min.js"></script>
     <!-- Stellar Parallax -->
     <script src="~/Client/js/jquery.stellar.min.js"></script>
-    <!-- YTPlayer -->
-    <script src="~/Client/js/jquery.mb.YTPlayer.min.js"></script>
     <!-- Owl carousel -->
     <script src="~/Client/js/owl.carousel.min.js"></script>
     <!-- Magnific Popup -->
     <script src="~/Client/js/jquery.magnific-popup.min.js"></script>
-    <script src="~/Client/js/magnific-popup-options.js"></script>
+    <script src="~/Client/js/magnific-popup-options.min.js"></script>
     <!-- Datepicker js -->
-    <script src="~/Admin/plugins/date-picker/spectrum.js"></script>
-    <script src="~/Admin/plugins/date-picker/jquery-ui.js"></script>
-    <script src="~/Admin/plugins/input-mask/jquery.maskedinput.js"></script>
+    <script src="~/Admin/plugins/date-picker/spectrum.min.js"></script>
+    <script src="~/Admin/plugins/date-picker/jquery-ui.min.js"></script>
+    <script src="~/Admin/plugins/input-mask/jquery.maskedinput.min.js"></script>
 
     <!-- Sweet alert js-->
     <script src="~/Admin/plugins/sweet-alert/jquery.sweet-modal.min.js"></script>
     <script src="~/Admin/plugins/sweet-alert/sweetalert.min.js"></script>
-    <script src="~/Admin/js/sweet-alert.js"></script>
-    <script src="~/Admin/plugins/masked-input/jquery.inputmask.js"></script>
+    <script src="~/Admin/js/sweet-alert.min.js"></script>
+    <script src="~/Admin/plugins/masked-input/jquery.inputmask.min.js"></script>
     <!-- Main -->
     <script src="~/Common/Axios/axios.min.js"></script>
 
