randevu al butonu yonlendirme düzeltildi.

--- a/PhotoStudioFS/Views/Shared/_Layout.cshtml
+++ b/PhotoStudioFS/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
                                 <h1 class="holder"><span>Fotoğraf İşleri</span></h1>
                                 <h2>Sinem Kobaner</h2>
                                 @*<p>27.03.2018</p>*@
-                                <p><a href="#appointment" class="btn btn-primary btn-custom">Randevu Al</a></p>
+                                <p><a href="#appcontact" class="btn btn-primary btn-custom">Randevu Al</a></p>
                                 <p><a asp-controller="Account" asp-action="Login" class="btn btn-primary btn-custom">Giriş Yap</a></p>
                             </div>
                         </div>
