--- a/PhotoStudioFS/Views/Shared/_Layout.cshtml
+++ b/PhotoStudioFS/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-2 col-md-push-5 text-center">
-                            <div id="colorlib-logo"><a href="index.html"><img src="~/images/logo.png" class="img-fluid img-responsive" alt="Sinem Kobaner" /></a></div>
+                            <div id="colorlib-logo"><a href="#home"><img src="~/images/logo.png" class="img-fluid img-responsive" alt="Sinem Kobaner" /></a></div>
                         </div>
                         <div class="col-md-5 col-md-pull-2 text-right menu-1">
                             <ul>
