--- a/PhotoStudioFS/wwwroot/Client/css/style.css
+++ b/PhotoStudioFS/wwwroot/Client/css/style.css
@@ -668,6 +668,7 @@ h1, h2, h3, h4, h5, h6, figure {
         -webkit-transition: 0.3s;
         -o-transition: 0.3s;
         transition: 0.3s;
+        width: 100%;
     }
 
     .gallery-img:hover:after, .gallery-img:focus:after {
