--- a/PhotoStudioFS/wwwroot/Client/css/style.css
+++ b/PhotoStudioFS/wwwroot/Client/css/style.css
@@ -649,7 +649,7 @@ h1, h2, h3, h4, h5, h6, figure {
         left: 0;
         right: 0;
         content: '';
-        background: rgba(0, 0, 0, 0.4);
+        /*background: rgba(0, 0, 0, 0.4);*/
         z-index: 0;
         -webkit-transition: 0.3s;
         -o-transition: 0.3s;
